# blind-music

./: .eslintrc.js  .gitattributes  .gitignore  README.md  default-sessions.json  package.json  quasar.conf.js  tsconfig.json
public/: splashscreen.html
song-exports/: .gitignore
src/: App.vue  index.template.html  quasar.d.ts
src-tauri/: .gitignore  Cargo.toml  Info.plist  rehab-cycling.key  rehab-cycling.key.pub  tauri.conf.json  tauri.dev.conf.json  tauri.preview.conf.json  tauri.production.conf.json  tauri.staging.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio_core_plugin.rs  data_recorder.rs  json_messages.rs  main.rs  session_state.rs  system_utilities.rs  thera_client.rs
src-tauri/src/audio_core_plugin/: event_emitters.rs  tauri_commands.rs
src-tauri/src/data_recorder/: helpers.rs  session_results.rs  tauri_commands.rs
src-tauri/src/thera_client/: blueparser.rs
src/assets/: feather-icon.tiff
src/boot/: axios.ts  backend-event-dispatcher.js  composition-api.ts  devtools.ts  i18n.ts
src/components/: ConnectionTroubleShootingPanel.vue  HelpPanel.vue  LanguageSwitcher.vue  PendingConnectionPanel.vue  TigoStatePanel.vue
src/components/CyclingSession/: DeviceConnectionState.vue  LineChart.vue  SessionFinished.vue  SessionTimeNumbers.vue  SessionTimeProgress.vue
src/components/MusicLibrary/: MusicLibraryPanel.vue  SessionCards.vue  SessionList.vue
src/components/MusicSession/: LineGraph.vue  MusicControlPanel.vue
src/components/UI/: AveragePeakIndicator.vue  JBtnCircle.vue  JBtnL.vue  JBtnTxt.vue  JBtnTxtL.vue  JSlider.vue  TheraVSlider.vue
src/components/UserSession/: AvatarSelection.vue  CurrentUserWidget.vue  UserCreateSideBar.vue  UserPanel.vue
src/css/: app.sass  quasar.variables.sass
src/i18n/: index.ts
src/i18n/de/: index.ts
src/i18n/en-us/: index.ts
src/layouts/: NewLayout.vue
src/pages/: Index.vue  Offline.vue
src/router/: index.ts  routes.ts
src/store/: db.ts  index.ts
src/store/cycling-session/: actions.ts  (+4 more)
(+20 files in other folders)
