[package]
authors = ["Eric Busch", "Daniel Hahne"]
build = "src/build.rs"
default-run = "thera-music"
description = "An app to play Jymmin with Thera-trainer cycling devices."
edition = "2021"
license = ""
name = "thera-music"
repository = ""
version = "0.4.7"


[build-dependencies]
[build-dependencies.tauri-build]
version = "1.0.0"
features = []

[dependencies]
crossbeam-channel = "0.5"
serde_json = "1.0"
csv = "1.1.6"
regex = "1"
serde_repr = "0.1.7"
once_cell = "1.8.0"
online = "3.0.1"
tiny_http = "0.8"
tracing = "0.1.33"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "std"] }
url = "2.2.2"
uuid = "0.8.2"
websocket = "0.26.2"
version-compare = "0.1.0"
fs_extra = "1.2.0"
keytar = "0.1.6"
futures = "0.3"
single-instance = "0.3.3"
webbrowser = "0.6"
chronometer = "0.1.2"
getset = "0.1.2"
tokio = { version="1.17.0", features= ["time"] }
sysinfo = "0.25.1"

# Jymmin Tauri Plugins
tauri-plugin-jymmin-auth = { path = "../../tauri-plugins/tauri-plugin-jymmin-auth" }
tauri-plugin-jymmin-audio-core = { path = "../../tauri-plugins/tauri-plugin-jymmin-audio-core" }
tauri-plugin-jymmin-music-lib = { path = "../../tauri-plugins/tauri-plugin-jymmin-music-lib" }


[target.'cfg(windows)'.dependencies]
simulate = "0.3.0"

[dependencies.input-mapper]
default-features = false
path = "../../audio/audio-core/input-mapper"

[dependencies.session-player]
default-features = false
path = "../../audio/audio-core/session-player"


[dependencies.input-processor]
default-features = false
features = ["tigo"]
path = "../../input-processor"


[dependencies.serde]
features = ["derive"]
version = "1.0"

[dependencies.tauri]
features = ["api-all", "http-api", "updater"]
version = "1.0.0"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]
with-test-input-data = []
terminal-tracing = []

[profile.release]
lto = "thin"
